Fix bug on mobile on Hero description animation.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,7 +125,7 @@ html {
 }
 
 #description-animate{
-  width: 30ch;
+  width: 100%;
   text-wrap: nowrap;
   overflow: hidden;
   animation: typing 2s steps(30) infinite alternate-reverse;
